--- a/app/views/MyDisques/index.html
+++ b/app/views/MyDisques/index.html
@@ -1,6 +1,6 @@
 <div id="content">
   <h4>Mes disques -> {{user}}</h4>
-  <a href="MyDisques/frm" class="btn btn-primary" type="button">
+  <a href="MyDisques/frm" class="btn btn-primary" type="button"> <!-- redirige vers la création du disque-->
     <span class="glyphicon glyphicon-plus-sign"></span> Créer un disque
   </a>
   <ul class="list-group">
