--- a/app/views/MyDisques/create.html
+++ b/app/views/MyDisques/create.html
@@ -1,12 +1,12 @@
 <h2>Création d'un disque</h2>
 
-<form method="post" action="MyDisques/update">
+<form method="post" action="MyDisques/update"><!-- on utilise la méthode post -->
   <div class="form-group">
     <label for="name">Nom</label>
     <input type="text" name="name" id="name" class="form-control" required>
   </div>
 
-  <div class="form-group">
+  <div class="form-group"><!--mise en forme du formulaire-->
     <button type="submit" class="btn btn-primary btn-block">Créer le disque</button>
   </div>
 </form>
