--- a/app/views/scan/vFolder.html
+++ b/app/views/scan/vFolder.html
@@ -17,6 +17,7 @@
 						<li class="list-group-item">
 							<strong>Nom</strong>: {{diskName}}
 							<a href="Scan/show/{{disk.getId()}}/rename" class="btn btn-default">
+								<!-- redirige vers renommage disque-->
 								<span class="glyphicon glyphicon-edit"></span>
 								Modifier
 							</a>
