--- a/app/views/Admin/disques.html
+++ b/app/views/Admin/disques.html
@@ -3,6 +3,7 @@
 
   {% for user in users %}
     <h4>{{user.mail}}-{{user.login}} ({{user.status}})</h4>
+  <!-- On affiche l'email , le login et le status de l'utilisateur -->
 
   <ul class="list-group">
     {% for disk in user.disks %}
@@ -14,6 +15,7 @@
           <div class="col-md-3">
             {{disk.tarif}}
           </div>
+          <!-- Création d'une liste le nom du disque et le tarif du disque -->
           <div class="col-md-3">
             <div class="progress">
               <div
@@ -26,6 +28,7 @@
                     style="width: {{disk.getOccupation()}}%; min-width: 3em;"
                   {% endif %}
               >
+               <!-- Création de la progress bar pour l'occupation du disque -->
                 {{disk.getOccupation()}}%
               </div>
             </div>
@@ -35,6 +38,7 @@
               <span class="glyphicon glyphicon-search"></span>
               Ouvrir
             </button>
+            <!-- Création du bouton ouvrir -->
           </div>
         </div>
         <div class="clearfix"></div>
@@ -49,6 +53,7 @@
         <span class="glyphicon glyphicon-arrow-left"></span>
         Retour
       </a>
+      <!-- Création du bouton retour -->
     </div>
   </div>
 </div>
