--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -4,8 +4,10 @@
   <li class="list-group-item">
     <span class="glyphicon glyphicon-user"></span>
     <h4 style="display: inline-block;">Utilisateurs</h4>
+    <!-- Creer une liste pour chaque rubrique avec un icône associés -->
     {% if count.today.user %}
       <span class="label label-info">{{count.today.user}} {% if count.today.user == 1 %} nouveau {% else %} nouveaux {% endif %}</span>
+    <!-- affichage d'un label "nouveau" ou "nouveaux" -->
     {% endif %}
 
     <div class="btn-group-md pull-right">
@@ -14,12 +16,15 @@
         Ouvrir
         <span class="badge">{{count.all.user}}</span>
       </a>
+      <!-- Lien vers tous les utilisateurs , affichage de la valeur du champ user dans la colonne "all" et le tableau "count" -->
       <button class="btn btn-default">
         <span class="glyphicon glyphicon-plus-sign"></span>
         Nouveau...
       </button>
+      <!-- affichage d'un bouton "nouveau..." -->
     </div>
     <div class="clearfix"></div>
+    <!-- Séparer les blocs, méthode commune en HTML -->
   </li>
   <li class="list-group-item">
     <span class="glyphicon glyphicon-folder-close"></span>
