--- a/app/views/scan/changeTarif.html
+++ b/app/views/scan/changeTarif.html
@@ -1,6 +1,6 @@
 <h2>Changer la tarification du disque {{disk.nom}}</h2>
 
-<form method="post" action="Scan/changetarif">
+<form method="post" action="Scan/changetarif"> <!-- formulaire avec valeurs imposées-->
   <div class="form-group hidden">
     <input type="hidden" name="diskId" value="{{disk.getId()}}" required>
     <input type="hidden" name="userId" value="{{user.getId()}}" required>
@@ -9,7 +9,7 @@
   <div class="form-group">
     <label for="tarif">Choix du tarif</label>
     <select name="tarif" id="tarif" class="form-control">
-      {% for tarif in tarifs %}
+      {% for tarif in tarifs %} <!-- boucle pour générer les options du select-->
         <option value="{{tarif.id}}"{%if tarif.id == selected %} selected {% endif %}>{{tarif.quota}}{{tarif.unite}} pour {{tarif.prix}}€ avec marge de dépassement de {{tarif.margeDepassement * 100}}% (Coût de dépassement {{tarif.coutDepassement}}€/{{tarif.unite}})</option>
       {% endfor %}
     </select>
