--- a/app/views/scan/vFolder.html
+++ b/app/views/scan/vFolder.html
@@ -39,6 +39,7 @@
 							<a href="Scan/show/{{disk.getId()}}/changeTarif" class="btn btn-default">
 								<span class="glyphicon glyphicon-edit"></span>
 								Modifier la tarification...
+								<!-- redirige vers le changement de tarif-->
 							</a>
 							<!-- On affiche la valeur de la variable $tarif -->
 						</li>
