--- a/app/views/scan/rename.html
+++ b/app/views/scan/rename.html
@@ -1,9 +1,9 @@
 <h2>Renommer le disque {{disk.nom}}</h2>
 
-<form method="post" action="MyDisques/rename">
+<form method="post" action="MyDisques/rename"> <!-- envoie le formulaire dans le fichier myDisques.php-->
   <div class="form-group hidden">
-    <input type="hidden" name="diskId" value="{{disk.getId()}}" required>
-    <input type="hidden" name="userId" value="{{user.getId()}}" required>
+    <input type="hidden" name="diskId" value="{{disk.getId()}}" required> <!-- impose l'id du disque-->
+    <input type="hidden" name="userId" value="{{user.getId()}}" required> <!-- impose d'lid de l'utilisateur-->
   </div>
   <div class="form-group">
     <label for="name">Nouveau nom</label>
