--- a/app/views/main/vHeader.html
+++ b/app/views/main/vHeader.html
@@ -62,7 +62,7 @@
 					Accueil
 				</a>
 			</li>
-			{% for name, link in fil %}
+			{% for name, link in fil %} <!-- boucle pour l'affichage de chaque page encapsulée -->
 			<li>
 				<a href="{{link}}">
 					{{name}}
